--- a/ht_cats.css
+++ b/ht_cats.css
@@ -4,7 +4,6 @@ body {
 }
 
 header {
-  top: 0;
   background-color: #000;
   padding: 30px;
   text-align: center;
@@ -14,6 +13,13 @@ header {
 
 section {
   display: flex;
+}
+
+#catcenter {
+ display: block;
+  margin-left: auto;
+  margin-right: auto;
+  filter: grayscale(100%)
 }
 
 #ulNav {
@@ -51,12 +57,6 @@ article {
 
 a:hover {
   background-color: #111;
-}
-
-#catcenter {
- display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 footer {
