--- a/ht_cats.css
+++ b/ht_cats.css
@@ -15,6 +15,12 @@ section {
   display: flex;
 }
 
+#catcenter {
+ display: block;
+  margin-left: auto;
+  margin-right: auto;
+  filter: grayscale(100%)
+}
 
 #ulNav {
   list-style-type: none;
