--- a/ht_cats.css
+++ b/ht_cats.css
@@ -5,8 +5,8 @@ body {
 
 header {
   width: 100%;
-  margin:0;
-  background-color: #000;
+  margin-bottom: 1%;
+  background-color: #111;
   padding: 30px;
   text-align: center;
   font-size: 2em;
@@ -18,10 +18,18 @@ section {
 }
 
 #catcenter {
+  position: relative;
  display: block;
   margin-left: auto;
   margin-right: auto;
-  filter: grayscale(100%)
+  filter: grayscale(100%);
+}
+
+#cattips {
+  margin: 1em;
+  padding: 1%;
+  color: white;
+  background-color: #111;
 }
 
 #ulNav {
@@ -30,7 +38,7 @@ section {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #111;
+  background-color: #000;
   position: fixed;
   width: 100%;
 }
