--- a/ht_cats.css
+++ b/ht_cats.css
@@ -41,6 +41,7 @@ section {
   background-color: #000;
   position: fixed;
   width: 100%;
+  z-index: 1;
 }
 
 .navbar {
@@ -71,7 +72,7 @@ a:hover {
 
 footer {
   background-color: #000;
-  padding: 10px;
+  padding: 15px;
 }
 
 
